# helc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  test.c  test.hc
docs/: HowToUse.md  bnf.txt
src/: attrdef.hxx  debug.ixx  defint.ixx  helloc.ixx
src/generate/: CodeGen.ixx
src/lexer/: Lexer.ixx  Source.ixx
src/parser/: Ast.ixx  Parser.ixx
src/standard/: hckeywords.ixx  hctypes.ixx
src/symbol/: Debugger.ixx
